kubernetes/main/apps/network/external-services/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 9001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-ui
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.80
    ports:
      - port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-api
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.80
    ports:
      - port: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: network
  annotations:
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host minio.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-ui
                port:
                  number: 9001
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: network
  annotations:
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host s3.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
