kubernetes/main/apps/network/external-services/omada.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omada
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.10.200
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada
  namespace: network
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/upstream-vhost: 'omada.robsonhome.cloud:80'
    nginx.ingress.kubernetes.io/proxy-redirect-from: '~https://(.+):80/(.+)/login$'
    nginx.ingress.kubernetes.io/proxy-redirect-to: 'https://$1/$2/login'
spec:
  ingressClassName: internal
  rules:
    - host: &host omada.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada
                port:
                  number: 80
  tls:
    - hosts: [*host]
