kubernetes/main/apps/network/external-services/onepassword-connect.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onepassword-connect
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: onepassword-connect
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.45
    ports:
      - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: network
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # # nginx-ingress.kubernetes.io/rewrite-target: ^/admin(.*)$ /$2
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: internal
  rules:
    - host: &host onepassword-connect.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onepassword-connect
                port:
                  number: 8080
  tls:
    - hosts: [*host]
