kubernetes/main/apps/network/external-services/pihole.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.100.53
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: network
  annotations:
  # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  nginx-ingress.kubernetes.io/rewrite-target: ^/admin(.*)$ /$2
  # # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: internal
  rules:
    - host: &host pihole.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-ui
                port:
                  number: 80
  tls:
    - hosts:
        - *host
