kubernetes/main/apps/network/external-services/pikvm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pikvm
  namespace: network
  labels:
    app.kubernetes.io/name: pikvm
    app.kubernetes.io/instance: pikvm
spec:
  type: ExternalName
  externalName: pikvm.
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm
  namespace: network
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/name: pikvm
    app.kubernetes.io/instance: pikvm
spec:
  ingressClassName: internal
  rules:
    - host: &host pikvm.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pikvm
                port:
                  number: 443
  tls:
    - hosts:
        - *host
