kubernetes/main/apps/network/external-services/technitium.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 53443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: technitium
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.45
    ports:
      - port: 53443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: network
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: internal
  rules:
    - host: &host ns01.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium
                port:
                  number: 53443
  tls:
    - hosts: [*host]
