kubernetes/main/apps/network/external-services/truenas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.10.210
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: network
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host truenas.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
  tls:
    - hosts:
        - *host
